--- a/index.html
+++ b/index.html
@@ -7,6 +7,62 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <aside class="sidebar">
+            <div class="container">
+                <img src="#" alt="Fedorov Ivan">
+                <section class="contacts">
+                    <h2>Contact</h2>
+                    <h3>Phone number</h3>
+                        <span>+7-919-905-72-15</span>
+                    <h3>Email</h3>
+                        <span>fedorov_iv00@mail.ru</span>
+                </section>
+                <section class="education">
+                    <h2>Education</h2>
+                    <h3>2007&nbsp;&mdash; 2018</h3>
+                        <span>Secondary general education school No. 91 
+                        with in-depth study of individual subjects</span>
+                    <h3>2018&nbsp;&mdash; 2022</h3>
+                        <span>Izhevsk State Technical University named after M. T. Kalashnikov
+                        Faculty: IIVT
+                        Department: ASOIU</span>
+                </section>
+            </div>
+        </aside>
+        <div class="main-content">
+            <div class="container">
+                <header>
+                    <h1>Fedorov Ivan</h1>
+                    <h2>Front-End Developer</h2>
+                </header>
+                <section class="info">
+                    <h2>Personal information</h2>
+                    <p>There are no bad habits, I do sports. I like to cook, 
+                    I periodically spend time playing computer games. Previously, 
+                    I was engaged in music(I played the drum kit and guitar). 
+                    In my future position, I want to get "combat" development experience. 
+                    I want to become a specialist in the field of frontend development.</p>
+                </section>
+                <section class="skills">
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>Figma</li>
+                        <li>Photoshop</li>
+                    </ul>
+                </section>
+                <section class="exp">
+                    <h2>Work experience</h2>
+                    <span>There is no work experience in this area.</span>
+                </section>
+                <section class="example">
+                    <h2>Code example</h2>
+                    <span>code example</span>
+                </section>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
