feat: add image

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <main>
         <aside class="sidebar">
+            <img src="img/Fedorov Ivan.png" alt="Fedorov Ivan">
             <div class="container">
-                <img src="#" alt="Fedorov Ivan">
                 <section class="contacts">
                     <h2>Contact</h2>
                     <h3>Phone number</h3>
