feat: add header styles

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <img src="img/Fedorov Ivan.png" alt="Fedorov Ivan">
             <div class="container">
                 <section class="contacts">
-                    <h2>Contact</h2>
+                        <h2 class="sidebar-header">Contact</h2>
                     <h3>Phone number</h3>
-                        <span>+7-919-905-72-15</span>
+                    <a class="tel" href="tel:79199057215">+7-919-905-72-15</a>
                     <h3>Email</h3>
-                        <span>fedorov_iv00@mail.ru</span>
+                        <a class="mail" href="mailto:fedorov_iv00@mail.ru">fedorov_iv00@mail.ru</a>
                 </section>
                 <section class="education">
-                    <h2>Education</h2>
+                    <h2 class="sidebar-header">Education</h2>
                     <h3>2007&nbsp;&mdash; 2018</h3>
                         <span>Secondary general education school No. 91 
                         with in-depth study of individual subjects</span>
@@ -38,7 +38,7 @@
                     <h2>Front-End Developer</h2>
                 </header>
                 <section class="info">
-                    <h2>Personal information</h2>
+                    <h2 class="main-header">Personal information</h2>
                     <p>There are no bad habits, I do sports. I like to cook, 
                     I periodically spend time playing computer games. Previously, 
                     I was engaged in music(I played the drum kit and guitar). 
@@ -46,6 +46,7 @@
                     I want to become a specialist in the field of frontend development.</p>
                 </section>
                 <section class="skills">
+                    <h2 class="main-header">Core skill</h2>
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
@@ -55,11 +56,11 @@
                     </ul>
                 </section>
                 <section class="exp">
-                    <h2>Work experience</h2>
+                    <h2 class="main-header">Work experience</h2>
                     <span>There is no work experience in this area.</span>
                 </section>
                 <section class="example">
-                    <h2>Code example</h2>
+                    <h2 class="main-header">Code example</h2>
                     <span>code example</span>
                 </section>
             </div>
