--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
                 <section class="skills">
                     <h2 class="main-header">Core skill</h2>
                     <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>JavaScript Basics</li>
+                        <li>VS Code</li>
                         <li>Figma</li>
-                        <li>Photoshop</li>
+                        <li>Adobe Photoshop</li>
+                        <li>Git, GitHub</li>
                     </ul>
                 </section>
                 <section class="exp">
