--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -63,9 +66,24 @@
                 </section>
                 <section class="example">
                     <h2 class="main-header">Code example</h2>
-                    <span>code example</span>
+                    <pre>
+                        <code class="html">
+                        function nicknameGenerator(name){
+                            if(name.length &#60; 4)
+                              return "Error: Name too short";
+                            if(/[aeiou]/i.test(name[2]))
+                              return name.substr(0, 4)
+                            return name.substr(0, 3)
+                          }
+                        </code>
+                    </pre>
                 </section>
             </div>
+            <footer class="footer">
+                <a href="https://github.com/VaFFa201"><img src="img/free-icon-github-logo-25231.svg" width="40" height="40" alt="my GitHub"></a>
+                <div class="copyright">&copy;2021</div>  
+                <a href="https://rs.school/js/"><img src="img/rs_school_js.svg" width="40" height="40" alt="my GitHub"></a>
+            </footer>
         </div>
     </main>
 </body>
