fix: correct img name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <aside class="sidebar">
-            <img src="img/Fedorov Ivan.png" alt="Fedorov Ivan">
+            <img src="img/Fedorov_Ivan.png" alt="Fedorov Ivan">
             <div class="container">
                 <section class="contacts">
                         <h2 class="sidebar-header">Contact</h2>
