--- a/index.html
+++ b/index.html
@@ -11,80 +11,97 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
+        <nav class="menu">
+            <ul>
+                <li class="menu-item"><a href="">home</a></li>
+                <li class="menu-item"><a href="">about</a></li>
+                <li class="menu-item"><a href="">skills</a></li>
+                <li class="menu-item"><a href="">language</a></li>
+                <li class="menu-item"><a href="">projects</a></li>
+                <li class="menu-item"><a href="">code</a></li>
+                <li class="menu-item"><a href="">contacts</a></li>
+            </ul>
+            <button class="burger">brg</button>
+        </nav>
+    </header>
     <main>
-        <aside class="sidebar">
-            <img src="img/Fedorov_Ivan.png" alt="Fedorov Ivan">
-            <div class="container">
-                <section class="contacts">
-                        <h2 class="sidebar-header">Contact</h2>
-                    <h3>Phone number</h3>
-                    <a class="tel" href="tel:79199057215">+7-919-905-72-15</a>
-                    <h3>Email</h3>
-                        <a class="mail" href="mailto:fedorov_iv00@mail.ru">fedorov_iv00@mail.ru</a>
-                </section>
-                <section class="education">
-                    <h2 class="sidebar-header">Education</h2>
-                    <h3>2007&nbsp;&mdash; 2018</h3>
-                        <span>Secondary general education school No. 91 
-                        with in-depth study of individual subjects</span>
-                    <h3>2018&nbsp;&mdash; 2022</h3>
-                        <span>Izhevsk State Technical University named after M. T. Kalashnikov
-                        Faculty: IIVT
-                        Department: ASOIU</span>
-                </section>
-            </div>
-        </aside>
-        <div class="main-content">
-            <div class="container">
-                <header>
-                    <h1>Fedorov Ivan</h1>
-                    <h2>Front-End Developer</h2>
-                </header>
-                <section class="info">
-                    <h2 class="main-header">Personal information</h2>
-                    <p>There are no bad habits, I do sports. I like to cook, 
+        <div class="container">
+            <section class="hero">
+                <div class="hero-img">
+                    <img src="" alt="Fedorov Ivan">
+                </div>
+                <div class="hero-content">
+                    <div class="hero-content-box">
+                        <span class="hero-greetings">
+                            Hello, my name is <span class="name">Fedorov Ivan</span>
+                        </span>
+                        <span class="job">Front-End Developer</span>
+                    </div>
+                </div>
+            </section>
+            <section class="about-me">
+                <h2>about me</h2>
+                <p>    There are no bad habits, I do sports. I like to cook, 
                     I periodically spend time playing computer games. Previously, 
                     I was engaged in music(I played the drum kit and guitar). 
                     In my future position, I want to get "combat" development experience. 
                     I want to become a specialist in the field of frontend development.</p>
-                </section>
-                <section class="skills">
-                    <h2 class="main-header">Core skill</h2>
-                    <ul>
-                        <li>HTML5</li>
-                        <li>CSS3</li>
-                        <li>JavaScript Basics</li>
-                        <li>VS Code</li>
-                        <li>Figma</li>
-                        <li>Adobe Photoshop</li>
-                        <li>Git, GitHub</li>
-                    </ul>
-                </section>
-                <section class="exp">
-                    <h2 class="main-header">Work experience</h2>
-                    <span>There is no work experience in this area.</span>
-                </section>
-                <section class="example">
-                    <h2 class="main-header">Code example</h2>
-                    <pre>
-                        <code class="html">
-                        function nicknameGenerator(name){
-                            if(name.length &#60; 4)
-                              return "Error: Name too short";
-                            if(/[aeiou]/i.test(name[2]))
-                              return name.substr(0, 4)
-                            return name.substr(0, 3)
-                          }
-                        </code>
-                    </pre>
-                </section>
-            </div>
-            <footer class="footer">
-                <a href="https://github.com/VaFFa201"><img src="img/free-icon-github-logo-25231.svg" width="40" height="40" alt="my GitHub"></a>
-                <div class="copyright">&copy;2021</div>  
-                <a href="https://rs.school/js/"><img src="img/rs_school_js.svg" width="40" height="40" alt="my GitHub"></a>
-            </footer>
+            </section>
+            <section class="hard-skills">
+                <h2>hard skills</h2>
+                <ul class="skills">
+                    <li class="skill-point">HTML</li>
+                    <li class="skill-point">CSS</li>
+                    <li class="skill-point">JavaScript</li>
+                    <li class="skill-point">Figma</li>
+                    <li class="skill-point">Photoshop</li>
+                    <li class="skill-point">Git</li>
+                </ul>
+                <ul class="scale">
+                    <li class="scale-point">40%</li>
+                    <li class="scale-point">40%</li>
+                    <li class="scale-point">50%</li>
+                    <li class="scale-point">60%</li>
+                    <li class="scale-point">70%</li>
+                    <li class="scale-point">20%</li>
+                </ul>
+            </section>
+            <section class="projects">
+                <h2>projects</h2>
+                <ul class="project-list">
+                    <li class="project-card">project 1</li>
+                    <li class="project-card">project 2</li>
+                    <li class="project-card">project 3</li>
+                </ul>
+            </section>
+            <section class="code-example">
+                <h2>code example</h2>
+                <div class="code-card">
+                    Code
+                </div>
+            </section>
         </div>
     </main>
+    <footer class="footer">
+        <div class="contairer">
+            <div class="footer-contacts">
+                <h3>contacts</h3>
+                <ul class="contact-list">
+                    <li class="contact-point">+7-919-905-72-15</li>
+                    <li class="contact-point">fedorov_iv00@mail.ru</li>
+                    <li class="contact-point">*telegram*</li>
+                    <li class="contact-point">*discord*</li>
+                </ul>
+            </div>
+            <div class="footer-task">
+                <ul class="task-list">
+                    <li class="task-point">git</li>
+                    <li class="task-point">2021</li>
+                    <li class="task-point">rsschool</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
