--- a/index.html
+++ b/index.html
@@ -13,31 +13,32 @@
 </head>
 <body>
     <header class="header">
-        <nav class="menu">
-            <ul>
-                <li class="menu-item"><a href="">home</a></li>
-                <li class="menu-item"><a href="">about</a></li>
-                <li class="menu-item"><a href="">skills</a></li>
-                <li class="menu-item"><a href="">language</a></li>
-                <li class="menu-item"><a href="">projects</a></li>
-                <li class="menu-item"><a href="">code</a></li>
-                <li class="menu-item"><a href="">contacts</a></li>
-            </ul>
-            <button class="burger">brg</button>
-        </nav>
+        <div class="container">
+            <nav class="menu">
+                <ul>
+                    <li class="menu-item"><a href="">about</a></li>
+                    <li class="menu-item"><a href="">skills</a></li>
+                    <li class="menu-item"><a href="">language</a></li>
+                    <li class="menu-item"><a href="">projects</a></li>
+                    <li class="menu-item"><a href="">code</a></li>
+                    <li class="menu-item"><a href="">contacts</a></li>
+                </ul>
+                <button class="burger">brg</button>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="container">
             <section class="hero">
-                <div class="hero-img">
-                    <img src="" alt="Fedorov Ivan">
-                </div>
                 <div class="hero-content">
+                    <div class="hero-img">
+                        <img src="img/Fedorov_Ivan.png" alt="Fedorov Ivan">
+                    </div>
                     <div class="hero-content-box">
                         <span class="hero-greetings">
-                            Hello, my name is <span class="name">Fedorov Ivan</span>
+                            Hello, my name is <span id="name">Fedorov Ivan</span>
+                            <span id="job">Front-End Developer</span>
                         </span>
-                        <span class="job">Front-End Developer</span>
                     </div>
                 </div>
             </section>
