feat: style about-me, hard-skills and projects sections

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </section>
             <section class="about-me">
                 <h2>about me</h2>
-                <p>    There are no bad habits, I do sports. I like to cook, 
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;There are no bad habits, I do sports. I like to cook, 
                     I periodically spend time playing computer games. Previously, 
                     I was engaged in music(I played the drum kit and guitar). 
                     In my future position, I want to get "combat" development experience. 
@@ -54,27 +54,21 @@
                 <h2>hard skills</h2>
                 <ul class="skills">
                     <li class="skill-point">HTML</li>
-                    <li class="skill-point">CSS</li>
-                    <li class="skill-point">JavaScript</li>
                     <li class="skill-point">Figma</li>
-                    <li class="skill-point">Photoshop</li>
+                    <li class="skill-point">C#</li>
+                    <li class="skill-point">CSS</li>
                     <li class="skill-point">Git</li>
-                </ul>
-                <ul class="scale">
-                    <li class="scale-point">40%</li>
-                    <li class="scale-point">40%</li>
-                    <li class="scale-point">50%</li>
-                    <li class="scale-point">60%</li>
-                    <li class="scale-point">70%</li>
-                    <li class="scale-point">20%</li>
+                    <li class="skill-point">SQL</li>
+                    <li class="skill-point">JavaScript</li>
+                    <li class="skill-point">Photoshop</li>
                 </ul>
             </section>
             <section class="projects">
                 <h2>projects</h2>
                 <ul class="project-list">
-                    <li class="project-card">project 1</li>
-                    <li class="project-card">project 2</li>
-                    <li class="project-card">project 3</li>
+                    <li class="project-card project-card-1"><a href="https://jsfiddle.net/VaFFa/rhn634ug/2/"><img src="img/gallery.png" alt="Gallery"></a></li>
+                    <li class="project-card project-card-2"><a href="https://jsfiddle.net/VaFFa/k716fegm/1/"><img src="img/slide.png" alt="Slider"></a></li>
+                    <li class="project-card project-card-3"><a href="https://jsfiddle.net/VaFFa/d3y5k79r/1/"><img src="img/drag-n-drop.png" alt="Drag-n-drop"></a></li>
                 </ul>
             </section>
             <section class="code-example">
