--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li class="menu-item"><a href="#about-me">about</a></li>
                     <li class="menu-item"><a href="#hard-skills">skills</a></li>
-                    <li class="menu-item"><a href="">language</a></li>
+                    <li class="menu-item"><a href="#hard-skills">language</a></li>
                     <li class="menu-item"><a href="#projects">projects</a></li>
                     <li class="menu-item"><a href="#code-example">code</a></li>
                     <li class="menu-item"><a href="#contacts">contacts</a></li>
@@ -32,17 +32,12 @@
                     <ul class="menu_box">
                         <li><a class="menu_item" href="#about-me">About</a></li>
                         <li><a class="menu_item" href="#hard-skills">Skills</a></li>
-                        <li><a class="menu_item" href="#">Language</a></li>
+                        <li><a class="menu_item" href="#hard-skills">Language</a></li>
                         <li><a class="menu_item" href="#projects">Projects</a></li>
                         <li><a class="menu_item" href="#code-example">Code</a></li>
                         <li><a class="menu_item" href="#contacts">Contacts</a></li>
                     </ul>
                 </div>
-                <!-- <button class="burger">
-                    <div class="burger-slice"></div>
-                    <div class="burger-slice"></div>
-                    <div class="burger-slice"></div>
-                </button> -->
             </nav>
         </div>
     </header>
@@ -54,10 +49,10 @@
                         <img src="img/Fedorov_Ivan.png" alt="Fedorov Ivan">
                     </div>
                     <div class="hero-content-box">
-                        <span class="hero-greetings">
+                        <h1 class="hero-greetings">
                             Hello, my name is <span id="name">Fedorov Ivan</span>
                             <span id="job">Front-End Developer</span>
-                        </span>
+                        </h1>
                     </div>
                 </div>
             </section>
@@ -80,6 +75,7 @@
                     <li class="skill-point">SQL</li>
                     <li class="skill-point">JavaScript</li>
                     <li class="skill-point">Photoshop</li>
+                    <li class="skill-point">English - B2</li>
                 </ul>
             </section>
             <section class="projects">
@@ -113,7 +109,7 @@
             <div class="footer-contacts">
                 <h3 id="contacts">Contacts</h3>
                 <ul class="contact-list">
-                    <li class="contact-point"><a href="tel: 79199057215">+7-919-905-72-15</a></li><a href=""></a>
+                    <li class="contact-point"><a href="tel:+79199057215">+7-919-905-72-15</a></li>
                     <li class="contact-point"><a href="mailto:fedorov_iv00@mail.ru">fedorov_iv00@mail.ru</a></li>
                     <li class="contact-point"><a href="https://t.me/VaFFa_cd">Telegram</a></li>
                     <li class="contact-point"><a href="https://vk.com/vaffa_cd">Вконтакте</a></li>
@@ -128,5 +124,6 @@
             </div>
         </div>
     </footer>
+    <script src=""></script>
 </body>
 </html>
