--- a/index.html
+++ b/index.html
@@ -124,6 +124,6 @@
             </div>
         </div>
     </footer>
-    <script src=""></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
